# neuralmaze_finetuning

./: .gitignore  CLAUDE.md  README.md
lab_0/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
lab_1/: README.md  main.py  pyproject.toml  requirements.txt
lab_2/: .gitignore  README.md  inference.py  main.py  pyproject.toml  requirements.txt
lab_3/: README.md  inference.py  main.py  pyproject.toml  requirements.txt
lab_4/: README.md  inference.py  main.py  pyproject.toml
lab_5/: README.md  inference.py  main.py  pyproject.toml
lab_5b/: .gitignore  README.md  inference.py  main_gpt_oss.py  pyproject.toml  requirements.txt
lab_6/: main.py  pyproject.toml  requirements.txt
lab_6a/: README.md  main.py  pyproject.toml
lab_6b/: pyproject.toml
lab_7a/: .gitignore  inference.py  pyproject.toml
lab_7b/: .gitignore  README.md  inference.py  main.py  pyproject.toml  requirements.txt
lab_8/: .gitignore  GLM-Config  README.md  config.yaml  inference_ollama.py  inference_sdk.py  ntb.ipynb  pyproject.toml  requirements.txt
