[project]
name = "lab_1"
version = "0.1.0"
description = "Continued Pretraining (CPT) with Full Finetuning using Unsloth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "comet_ml",
    "unsloth",
    "transformers",
    "datasets",
    "trl",
    "huggingface_hub",
    "openai"
]

[tool.uv]
dev-dependencies = []
