[project]
name = "lab_3"
version = "0.1.0"
description = "LoRA Finetuning Experiment (SFT - Instruction Tuning)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "comet_ml",
    "unsloth",
    "transformers",
    "datasets",
    "trl",
    "huggingface_hub",
    "python-dotenv"
]

[tool.uv]
dev-dependencies = []
